sunuo (0.3.1) unstable; urgency=low

  * cache position in BinaryFileWriter

 --

sunuo (0.3.0) unstable; urgency=low

  * distribute log4net.dll
  * removed the --logfile option
  * use log4net in exception handlers and more
  * load legacy scripts from local/src and local/lib if present
  * moved main BaseDirectory declaration to Config
  * configure config file and base directory on the command line
  * command line arguments are no longer case insensitive
  * understand "--debug", "--profile", "--service"
  * added directories to Config:
    - ConfigDirectory = BaseDirectory + "/Data"
    - SaveDirectory = BaseDirectory + "/Saves"
    - BackupDirectory = BaseDirectory + "/Backup"
  * moved bootstrapping code to Bootstrap.cs
  * change to base directory
  * GameServerListConfig.GameServers returns IList
  * removed zlib workaround which should be in scripts
  * MultiConOut is a dummy now that log4net is being used
  * disable console in service mode
  * added Config.Features
    - disable-context-menus
    - prefer-ascii
    - delocalize
    - oldschool
    - disable-tile-patch
    - age-of-shadows, samurai-empire
  * support StringQuery
  * Config.MultiThreading renamed to Config.Features["multi-threading"]
  * moved config classes to namespace Server.Config
  * Config.GameServerList implements IEnumerable
  * all unsafe code replaced with managed implementations
  * added property Mobile.LastCombatTime
  * added interface IGold
  * optimized memory allocations during world load
  * cache DateTime.Now
  * don't allocate an ArrayList when empty:
    - Mobile.SkillMods
    - Mobile.StatMods
    - Mobile.Stabled
    - Mobile.Virtues
  * don't allocate empty Skill objects
  * added GenericReader.ReadMobileListOrNull()
  * use string.Intern() in BinaryFileReader.ReadString()
  * use AutoResetEvent to notify Timer and main loop
  * Gump.GetTypeID() uses ToInt64()
  * encryption is disabled by default
  * login: use proprietary timestamp format for now