@@ -1,6 +1,7 @@
 sunuo (0.3.1) unstable; urgency=low
 
   * cache position in BinaryFileWriter
+  * removed BinaryFileWriter.UnderlyingStream
 
  --
 
